v0.9/_sources/examples/calculations/Parse_Angles.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_calculations_Parse_Angles.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_calculations_Parse_Angles.py:


Parse angles
============

Demonstrate how to convert direction strings to angles.

The code below shows how to parse directional text into angles.
It also  demonstrates the function's flexibility
in handling various string formatting.



.. code-block:: python

    import metpy.calc as mpcalc







Create a test value of a directional text



.. code-block:: python

    dir_str = 'SOUTH SOUTH EAST'
    print(dir_str)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    SOUTH SOUTH EAST


Now throw that string into the function to calculate
the corresponding angle



.. code-block:: python

    angle_deg = mpcalc.parse_angle(dir_str)
    print(angle_deg)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    157.5 degree


The function can also handle arrays of string
in many different abbrieviations and capitalizations



.. code-block:: python

    dir_str_list = ['ne', 'NE', 'NORTHEAST', 'NORTH_EAST', 'NORTH east']
    angle_deg_list = mpcalc.parse_angle(dir_str_list)
    print(angle_deg_list)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    (<Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>)


**Total running time of the script:** ( 0 minutes  0.001 seconds)


.. _sphx_glr_download_examples_calculations_Parse_Angles.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: Parse_Angles.py <Parse_Angles.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: Parse_Angles.ipynb <Parse_Angles.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
